[package]
name = "dream-path"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"
description = "Byte-first normalized virtual resource paths for DreamWeave/OpenMW-style asset lookup"
readme = "README.md"
documentation = "https://dreamweave-mp.github.io/dream_path/dream_path/index.html"
repository = "https://github.com/DreamWeave-MP/dream_path"
license = "GPL-3.0-only"
keywords = ["openmw", "vfs", "assets", "paths", "modding"]
categories = ["game-development"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
bstr = { version = "1.12.1", default-features = false, features = ["std"] }
mlua = { version = "0.11.6", default-features = false, optional = true }

[features]
default = []
lua = ["dep:mlua"]
standalone-lua = ["lua", "mlua/luajit52", "mlua/vendored"]

[package.metadata.docs.rs]
features = ["standalone-lua"]
